--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
     "reactstrap": "^9.2.3",
+    "serve": "^14.2.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
